Add and refine tests for FindCommandParserTest and FindCommandTest